# matrix-cpp-di

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  common.cmake
src/: CMakeLists.txt
src/common/: ArgumentNullException.h  BaseException.h  Platform.h  TextFormatter.cpp  WinStringExtensions.h
src/configuration/: ConfigurationProvider.cpp  ConfigurationProvider.h  ConfigurationRoot.cpp  FileConfigurationProvider.h  IConfiguration.h  IniConfigurationProvider.cpp  IniConfigurationProvider.h
src/di/: ApplicationBase.cpp  ApplicationBase.h  ApplicationBuilder.cpp  ApplicationBuilder.h  ApplicationStartBlock.cpp  ApplicationStartBlock.h  ApplicationStartBlockContext.cpp  ComponentBase.h  IApplication.h  IApplicationBuilder.h  IApplicationStartBlock.h  InstanceCreatorContext.cpp  InstanceDescriptor.cpp  ServiceDescriptor.cpp  ServiceDescriptor.h  ServiceLifetime.h  TypeInfo.cpp
src/logging/: ConsoleLoggerProvider.cpp  ILoggerFactory.h  InternalLogger.cpp  InternalLogger.h  LoggerBase.cpp  LoggerBase.h  LoggerFactory.cpp  VsOutputLogger.cpp  VsOutputLoggerProvider.cpp
src/matrix-light/: CMakeLists.txt  common.cmake  pch.h
src/matrix-light-demo/: CMakeLists.txt  main.cpp
src/matrix-light/include/collections/: IDictionary.h  IEnumerable.h  IEnumerator.h
src/matrix-light/include/common/: ArgumentNullException.h  ConstStrings.h  Exception.h  FileLoadException.h  FileNotExistsException.h  Functions.h  Guard.h  MapExtensions.h  ObjectMap.h  Stopwatch.h  StringExtensions.h  TextFormatter.h  VectorExtensions.h
src/matrix-light/include/configuration/: IConfigurationBuilder.h  IniConfigurationProvider.h
src/matrix-light/include/di/: ApplicationStartBlockContext.h  IServiceContainer.h  IServiceProvider.h  InstanceDescriptor.h  ServiceContainer.h  TypeInfo.h  TypeMap.h
src/matrix-light/include/io/: Directory.h  DirectoryInfo.h  File.h  FileInfo.h  FileStream.h  FileSystemInfo.h  FileWatcher.h  Process.h
src/matrix-light/include/logging/: ConsoleLogger.h  ILogger.h  VsOutput.h
src/matrix-light/include/pipeline/: IPipelineBuilder.h  Pipeline.h
src/matrix-light/include/services/: AppStartBlockProvider.h  DataContext.h
src/matrix-light/include/task/: DoWithResult.h  Task.h  TaskWithResult.h
src/matrix-light/src/common/: ArgumentNullException.cpp  BaseException.cpp  ConstStrings.cpp  Exception.cpp  FileLoadException.cpp  FileNotExistsException.cpp  Guard.cpp  Platform.cpp  Stopwatch.cpp  StringExtensions.cpp  TextFormatter.cpp
src/matrix-light/src/configuration/: ConfigurationBuilder.cpp  IniConfigurationProvider.cpp  MemoryConfigurationProvider.cpp
src/matrix-light/src/di/: ApplicationStartBlock.cpp  ComponentBase.cpp  ServiceContainer.cpp  TypeInfo.cpp  TypeMap.cpp
src/matrix-light/src/io/: Directory.cpp  DirectoryInfo.cpp  File.cpp  FileInfo.cpp  FileStream.cpp  FileSystemInfo.cpp  FileWatcher.cpp  Process.cpp
src/matrix-light/src/logging/: ConsoleLogger.cpp  LogLevelConverter.cpp  LoggerBase.cpp  VsOutput.cpp  VsOutputLogger.cpp
src/matrix-light/src/pipeline/: Pipeline.cpp  PipelineBuilder.cpp  PipelineContext.cpp
src/matrix-light/src/services/: AppStartBlockProvider.cpp  DataContext.cpp
src/matrix-light/src/task/: Task.cpp  TaskWithResult.cpp
src/pipeline/: PipelineBlock.cpp  PipelineBlock.h  PipelineBuilder.h  PipelineContext.cpp  PipelineContext.h
src/services/: AppStartBlockProvider.cpp  AppStartBlockProvider.h  IAppStartBlockProvider.h
src/task/: CancellationToken.cpp  Task.h
test/: CMakeLists.txt
test/include/: ApiHandleComponent.h  InitializeComponent.h  TestServices.h
test/src/: ApiHandleComponent.cpp  TestFiles.cpp  TestServices.cpp
test/tests/common/: MapExtensionsTests.cpp  ObjectMapTests.cpp  TextFormatterTests.cpp  VectorExtensionsTests.cpp  stringextensionstests.cpp
test/tests/configuration/: IniConfigurationProviderTests.cpp
test/tests/di/: ApplicationTests.cpp  InstanceCreatorContextTests.cpp  ServiceContainerTests.cpp  ServiceDescriptorTests.cpp  TypeMapTests.cpp
test/tests/io/: DirectoryTests.cpp  FileInfoTests.cpp  FileTests.cpp
test/tests/logging/: ConsoleLoggerProviderTests.cpp  LogLevelConverterTests.cpp  LoggerFactoryTests.cpp  VsOutputLogger.cpp  VsOutputLoggerProviderTests.cpp
test/tests/pipeline/: PipelineBlockTests.cpp
test/tests/task/: DoTests.cpp
tests/: CMakeLists.txt
tests/unit-tests-matrix-light/: CMakeLists.txt
tests/unit-tests-matrix-light/files/: configuration.ini
tests/unit-tests-matrix-light/include/: IMessageService.h  LoggerCreator.h  MessageService.h  MockApplication.h  MockServiceContainer.h  MockServiceProvider.h  Rectangle.h  TestFiles.h
tests/unit-tests-matrix-light/src/: MessageService.cpp  MockServiceContainer.cpp  MockServiceProvider.cpp  Rectangle.cpp  TestFiles.cpp  TestServices.cpp
tests/unit-tests-matrix-light/tests/common/: StopwatchTests.cpp  TextFormatterTests.cpp  vectorextensionstests.cpp
tests/unit-tests-matrix-light/tests/configuration/: IniConfigurationProviderTests.cpp
tests/unit-tests-matrix-light/tests/di/: ApplicationBuilderTests.cpp  ApplicationStartBlockTests.cpp  ApplicationTests.cpp  ServiceDescriptorTests.cpp  ServiceLifetimeTests.cpp  TypeInfoTests.cpp
tests/unit-tests-matrix-light/tests/io/: FileLockerTests.cpp  FileStreamTests.cpp  FileWatcherTests.cpp  ProcessTests.cpp  directoryinfotests.cpp
tests/unit-tests-matrix-light/tests/linux/: LinuxEnvironmentInfoTests.cpp  LinuxResourceManagerTests.cpp
tests/unit-tests-matrix-light/tests/logging/: ConsoleLoggerTests.cpp  InternalLoggerTests.cpp  VsOutputLogger.cpp
tests/unit-tests-matrix-light/tests/pipeline/: PipelineBuilderTests.cpp  PipelineContextTests.cpp  PipelineTests.cpp
tests/unit-tests-matrix-light/tests/services/: DataContextTests.cpp
tests/unit-tests-matrix-light/tests/task/: DoWithResultTests.cpp  TaskTests.cpp  TaskWithResultTests.cpp
